syntax = "proto3";

package proto;

option go_package= "/pb";

service SchoolService {
  rpc GetKey (KeyRequest) returns (KeyResponse);
}

message KeyRequest {
  string school_id = 1;
  string bearerToken = 2;
}

message KeyResponse {
  string key = 1;
  string error = 2;
}
